tests/NormalTests/paczka1/small_fuzzy/68002869.err
Error in line 2: qnU9i S44 63,1
Error in line 3: qnU9i S310 95,9
